Toi da sua folder css html va file readme

--- a/html/index.html
+++ b/html/index.html
@@ -5,79 +5,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Thời khóa biểu</title>
+    <title>Manwah</title>
 </head>
 
 <body>
-    <!-- Quá xấu -->
-    <div class="header">
-        Tuần thứ 24(6/2/2023 - 12/2/2023)
-    </div>
-    <div class="table">
-        <table>
-            <thead>
-                <tr>
-                    <td></td>
-                    <td>Thứ hai</td>
-                    <td>Thứ ba</td>
-                    <td>Thứ tư</td>
-                    <td>Thứ năm</td>
-                    <td>Thứ sáu</td>
-                    <td>Thứ bảy</td>
-                    <td>Chủ nhật</td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>
-                        <div class="col-md-8">Tiết 1 <br>(07:00 -> 07:50)</div>
-                    </td>
-                    <td>
-                        <div class="col-md-8">Xác suất thống kê
-                            <div class="room">345-a3</div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="col-md-8">Triết học Mác - Lênin
-                            <div class="room">202-B1</div>
-
-                        </div>
-                    </td>
-                    <td>
-                        <div class="col-md-8">
-                            <div class="room"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="col-md-8">Xác suất thống kê
-                            <div class="room">337-A3</div>
-
-                        </div>
-                    </td>
-                    <td>
-                        <div class="col-md-8">
-                            <div class="room"></div>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="col-md-8">Triết học Mác - Lênin
-                            <div class="room">311-B5
-
-                            </div>
-                    </td>
-
-    </div>
-    <td>
-        <div class="col-md-8">
-            <div class="room"></div>
+    <div class="relative">
+        <div class="container">
+            <div class="flex right">
+                <div class="flag px-2.5">vn</div>
+                <div class="help px-2.5">trợ giúp</div>
+                <div class="login px-2.5">Đăng nhập</div>
+                <div class="location">Hà Nội</div>
+            </div>
         </div>
-    </td>
-    </tr>
 
-    </tbody>
-    </table>
+        <div class="container">
+            <div class="flex justify-between">
+                <img src="https://manwah.com.vn/images/logo/manwah.svg" alt="brand_gg" class="block"
+                    style="width: 150px; cursor: pointer;">
+                <ul class="flex menu-nav justify-between justify-center">
+                    <li class="menu-item">
+                        <h2 class="cursor-pointer menu-link">Ưu đãi</h2>
+                    </li>
+                    <li class="menu-item">
+                        <h2 class="cursor-pointer menu-link">Thực đơn</h2>
+                    </li>
+                    <li class="menu-item">
+                        <h2 class="cursor-pointer menu-link">Đặt bài</h2>
+                    </li>
+                </ul>
+                <div class="cursor-pointer text">tab</div>
+            </div>
+        </div>
     </div>
 </body>
 
